--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,12 @@ cmake_minimum_required (VERSION 3.16.3 FATAL_ERROR)
 
 project(PuyaPlayground  LANGUAGES  C CXX)
 
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  set(CMAKE_BUILD_TYPE "Debug")
+endif()
+
 add_compile_definitions(${PUYA_CHIP})
 set(CMAKE_EXECUTABLE_SUFFIX ".elf")
-
-execute_process(COMMAND bash -c "pyocd list | grep -Po '[0-9a-z]{48}'" OUTPUT_VARIABLE OCD_PROBE OUTPUT_STRIP_TRAILING_WHITESPACE)
-configure_file(${CMAKE_SOURCE_DIR}/pyocd/pyocd.in ${CMAKE_BINARY_DIR}/pyocd.yaml)
 
 add_subdirectory(puya_libs)
 target_include_directories(PuyaBSP PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/app)
@@ -17,6 +18,10 @@ target_include_directories(${PROJECT_NAME} PRIVATE $<TARGET_PROPERTY:PuyaBSP,INT
 
 add_custom_target(flash
     COMMENT "Flashing software on Puya board"
-    COMMAND  pyocd load --pack ${CMAKE_SOURCE_DIR}/pyocd/Puya.PY32F0xx_DFP.1.1.7.pack --target ${PUYA_CHIP} ${CMAKE_BINARY_DIR}/PuyaPlayground.elf
+    COMMAND pyocd load 
+            --probe `pyocd list | grep -Po '[0-9a-z]{48}'`
+            --pack ${CMAKE_SOURCE_DIR}/pyocd/Puya.PY32F0xx_DFP.1.1.7.pack 
+            --target ${PUYA_CHIP} 
+            ${CMAKE_BINARY_DIR}/PuyaPlayground.elf
     )
 add_dependencies(flash ${PROJECT_NAME})
