--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,8 +22,18 @@
             "extensions": [
                 "streetsidesoftware.code-spell-checker",
                 "xaver.clang-format",
-                "marus25.cortex-debug"
+                "marus25.cortex-debug",
+                "jkearins.action-buttons-ext",
+                "alexnesnes.teleplot",
+                "ms-vscode.vscode-serial-monitor"
             ]
         }
-    }
+    },
+    "mounts": [
+        "source=/dev,target=/dev,type=bind,consistency=cached",
+        "source=/run/udev,target=/run/udev,type=bind,consistency=cached",
+        "source=/etc/udev/rules.d,target=/etc/udev/rules.d,type=bind,consistency=cached",
+    ],
+    "userEnvProbe": "loginInteractiveShell",
+    "privileged": true
 }
