--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,31 @@ endif()
 add_compile_definitions(${PUYA_CHIP})
 set(CMAKE_EXECUTABLE_SUFFIX ".elf")
 
+# Get RTT from github.
+include(FetchContent)
+FetchContent_Declare(
+    jlink_rtt
+    GIT_REPOSITORY https://github.com/jmacheta/jlink_rtt-cmake
+    GIT_TAG main
+)
+FetchContent_MakeAvailable(jlink_rtt)
+
+# Include Puya BSP
 add_subdirectory(puya_libs)
 target_include_directories(PuyaBSP PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/app)
 
-add_executable(${PROJECT_NAME} app/py32f0xx_it.c app/py32f0xx_hal_msp.c app/main.c )
+# Set executable sources
+add_executable(${PROJECT_NAME} 
+    app/py32f0xx_it.c 
+    app/py32f0xx_hal_msp.c 
+    app/main.c 
+)
+
+target_link_libraries(${PROJECT_NAME} PUBLIC jlink_rtt)
 target_link_libraries(${PROJECT_NAME} PUBLIC $<TARGET_OBJECTS:PuyaBSP>)
 target_include_directories(${PROJECT_NAME} PRIVATE $<TARGET_PROPERTY:PuyaBSP,INTERFACE_INCLUDE_DIRECTORIES>)
 
+# Configure custom "flash" target
 add_custom_target(flash
     COMMENT "Flashing software on Puya board"
     COMMAND pyocd load 
@@ -25,3 +43,14 @@ add_custom_target(flash
             ${CMAKE_BINARY_DIR}/PuyaPlayground.elf
     )
 add_dependencies(flash ${PROJECT_NAME})
+
+# Configure custom "rtt" target
+add_custom_target(rtt
+    COMMENT "Starting rtt listener"
+    COMMAND pyocd rtt 
+            --probe `pyocd list | grep -Po '[0-9a-z]{48}'`
+            --pack ${CMAKE_SOURCE_DIR}/pyocd/Puya.PY32F0xx_DFP.1.1.7.pack 
+            --target ${PUYA_CHIP} 
+            -a `grep -Po '.*(0x[0-9a-f]{8}).*_SEGGER_RTT' ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.map | grep -Po '0x[0-9a-f]{8}'`
+    )
+add_dependencies(rtt ${PROJECT_NAME})
